fixed spacing in sponsored product cards

--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ html, body {
 .product-name {
     font-size: 1rem;
     color: #1a1a1a;
-    margin: 0 0 8px 8px;
+    margin: 0 0 25px 8px;
     font-weight: 700;
 }
 
@@ -381,7 +381,6 @@ html, body {
 .vendor-brand span, 
 .product-price {
     text-decoration: none !important;
-    border-bottom: none !important;
     display: flex;
     align-items: center;
 }
@@ -394,7 +393,7 @@ html, body {
     justify-content: space-between;
     align-items: center;
     background-color: #f9fbfc;
-    margin: 0 8px 8px 8px;
+    margin: 0 8px 10px 8px;
 }
 
 .vendor-brand {
